[package]
name = "mailnoti"
version = "0.6.3-rc.3"
edition = "2021"


[dependencies]
anyhow = "1.0.71"
async-std = "1.12.0"
clap = { version = "4.2.2", features = ["derive", "cargo"] }
env_logger = "0.10.0"
get_if_addrs = "0.5.3"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = [ "release_max_level_debug" ] }
mailin-embedded = "0.8.2"
neolink_core = { path = "../core", version = "0.6.3-rc.3" }
once_cell = "1.19.0"
regex = "1.8.1"
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.8.2"
validator = {version="0.18.1", features = ["derive"] }
